--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,14 +69,18 @@ body {
 /* colour for each box */
 .box0 {
     background: hsla(0, 0%, 100%, 0);
+    
 }
 
 .box1 {
     background: #3498db;
+    
 }
 
 .box2 {
     background: #16a085;
+    border-radius: 15px;
+
 }
 
 .box3 {
@@ -125,7 +129,6 @@ body {
     height: inherit;
     margin: 10px;
     padding: 10px;
-    border-radius: 25px;
     /* flex: 1;  */
 }
 
@@ -135,16 +138,18 @@ body {
     display: flex;
     justify-content: flex-end;
     width: auto;
+    
 }
 
 .container {
     display: flex;
     justify-content: flex-end;
+    
 }
 
 .box1 {
-    flex-basis: 900px;
-    flex-grow: 1;
+    /* flex-basis: 900px; */
+    /* flex-grow: 1; */
 }
 
 .box0 {
@@ -153,5 +158,5 @@ body {
 }
 
 input {
-    border-radius: 25px;
+    border-radius: 15px;
   }
