--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,8 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - SMS_MVCDTO</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    @* compiling tags *@
+    <link rel="stylesheet" href="~/css/styles.css">
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />  *@
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" /> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SMS_MVCDTO.styles.css" asp-append-version="true" />
     @*
@@ -15,9 +17,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     *@
 </head>
+ @* rex  *@
+<body> 
 
-<body>
-    <header>
+    <header>  @* nrex 
+nav
+navbar-expand-sm
+navbar-toggleable-sm
+navbar-light
+
+/
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span></button>
+/
+
+
+
+
+
+
+4358    @media (min-width: 576px)
+4422    @media (min-width: 768px) 
+4486    @media (min-width: 992px) 
+4550    @media (min-width: 1200px)
+4614    @media (min-width: 1400px) 
+
+         *@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SMS_MVCDTO TOP</a>
